--- a/app/src/main/res/layout/widget_lotofacil.xml
+++ b/app/src/main/res/layout/widget_lotofacil.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,48 +18,51 @@
             android:layout_height="24dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_lotofacil_logo"
-            app:tint="?android:attr/textColorPrimary" />
+            android:tint="?android:attr/textColorPrimary" />
 
         <TextView
             android:id="@+id/widget_title"
+            style="@style/Widget.Text.Title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:text="@string/home_title"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?android:attr/textColorPrimary"
-            android:textStyle="bold" />
+            android:text="@string/home_title" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/widget_refresh_button"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:clickable="true"
             android:contentDescription="@string/home_sync_button_description"
-            android:focusable="true"
-            android:src="@drawable/ic_refresh" />
+            android:src="@drawable/ic_refresh"
+            android:tint="?android:attr/textColorSecondary" />
     </LinearLayout>
 
-    <GridLayout
-        android:id="@+id/widget_numbers_grid"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:columnCount="5"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="55dp">
-        </GridLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="8dp">
 
-    <TextView
-        android:id="@+id/widget_loading_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/general_loading"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="?android:attr/textColorSecondary"
-        android:visibility="gone" />
+        <GridLayout
+            android:id="@+id/widget_numbers_grid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="5"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
+        <TextView
+            android:id="@+id/widget_loading_text"
+            style="@style/Widget.Text.Loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/general_loading"
+            android:visibility="visible"
+            tools:visibility="gone"/>
+
+    </FrameLayout>
 </LinearLayout>
