--- a/app/src/main/res/layout/widget_number_ball.xml
+++ b/app/src/main/res/layout/widget_number_ball.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_margin="2dp"
-    android:background="@drawable/widget_ball_background">
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="fill_horizontal">
 
     <TextView
         android:id="@+id/widget_ball_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/Widget.Text.NumberBall"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_gravity="center"
+        android:layout_margin="2dp"
+        android:background="@drawable/widget_ball_background"
         android:gravity="center"
-        android:text="@string/_00"
-        android:textColor="?android:attr/textColorPrimary"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        android:text="@string/_00"/>
 
 </FrameLayout>
