--- a/app/src/main/res/layout/widget_last_draw.xml
+++ b/app/src/main/res/layout/widget_last_draw.xml
@@ -44,7 +44,7 @@
         android:id="@+id/widget_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/card_padding"
+        android:layout_marginTop="@dimen/small_padding"
         android:layout_weight="1"
         android:visibility="gone"
         tools:visibility="visible">
@@ -61,9 +61,10 @@
         android:id="@+id/widget_loading_text"
         style="@style/Widget.Text.Loading"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/card_padding"
+        android:layout_weight="1"
+        android:gravity="center"
         android:text="@string/general_loading"
         android:visibility="visible"
         tools:visibility="gone" />
